2002-10-29 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Added support in H323 to non-latin chars by
	converting from UTF-8 to UCS-2.
	
	* src/connection.cpp: See above.
	
	* src/endpoint.cpp: See above.
	
	* src/main_window.cpp: See above.
	
	* src/pref_window.cpp: See above.
	
2002-10-29 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Set version to 0.95.0.
	
2002-10-29 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Changed the API for 
	gnomemeeting_view_menu_set_sensitive. Only valid choices are 
	selectable. It is for example impossible to select local video
	if no local video is sent, even if preview is running. The "Both"
	choices are also unselectable when only one video channel is opened.
	
	* src/endpoint.h: See above.
	
	* src/gdkvideoio.cpp: See above.

	* src/gdkvideoio.h: See above.

	* src/ils.cpp: Applied patch from Paul. Fixes small memleak and also
	permits to use chars like <, >, & in comments in ILS.

	* src/main_window.cpp: See above.

	* src/menu.cpp: See above.

	* src/menu.h: See above.

2002-10-27 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Fixed #96652.
	
2002-10-27 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/druid.cpp: Fixed #96653.
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* src/gdkvideoio.cpp: Changed misplaced #endif.

	* src/endpoint.cpp: Added support for software codecs.
	
tag gm_0_94_1
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Changed PREREQ and SDL check version.
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp, src/vfakeio.cpp: Fixed warnings.

	* src/sound_handling.cpp: Check that mixer != NULL.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Reorganised GDK locks.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Reorganised GDK locks.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>
