@@ -1,3 +1,15 @@
+2002-10-30 Damien Sandras  <dsandras@seconix.com>
+
+	* src/chat_window.cpp: Fixed conversion. If conversion fails, then
+	fallback to ISO-8859-1.
+	* src/connection.cpp: Same.
+	* src/endpoint.cpp: Same.
+	* src/ils.cpp: Same.
+	* src/main_window.cpp: Same.
+	* src/misc.cpp: Same.
+	* src/misc.h: Same.
+	* src/pref_window.cpp: Same.
+	
 2002-10-29 Damien Sandras  <dsandras@seconix.com>
 
 	* src/chat_window.cpp: Added support in H323 to non-latin chars by
